generated/checkers/gen/AllGen-Concurrency-7d42e097607c4d246d99225bf2b195b6167a210c/build_logs/syntax-repair-02/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkEndAnalysis(clang::ento::ExplodedGraph&, clang::ento::BugReporter&, clang::ento::ExprEngine&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:550:44: error: no matching function for call to ‘clang::ento::PathDiagnosticLocation::createBegin(const clang::SourceLocation&, const clang::SourceManager&)’
  550 |         PathDiagnosticLocation::createBegin(SI.FreeLoc, BR.getSourceManager());
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&)’
  254 |   static PathDiagnosticLocation createBegin(const Decl *D,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:57: note:   no known conversion for argument 1 from ‘const clang::SourceLocation’ to ‘const clang::Decl*’
  254 |   static PathDiagnosticLocation createBegin(const Decl *D,
      |                                             ~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:3: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  261 |   createBegin(const Decl *D, const SourceManager &SM,
      |   ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:3: note:   candidate expects 3 arguments, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:267:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Stmt*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  267 |   static PathDiagnosticLocation createBegin(const Stmt *S,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:267:33: note:   candidate expects 3 arguments, 2 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
